--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/Unleash/unleash-client-node",
   "dependencies": {
-    "ip": "^2.0.1",
+    "ip-address": "^9.0.5",
     "make-fetch-happen": "^12.0.0",
     "murmurhash3js": "^3.0.1",
     "semver": "^7.5.3"
@@ -48,7 +48,7 @@
     "@ava/typescript": "^4.0.0",
     "@tsconfig/node12": "^12.0.0",
     "@types/express": "^4.17.17",
-    "@types/ip": "^1.1.0",
+    "@types/jsbn": "^1.2.33",
     "@types/make-fetch-happen": "^10.0.1",
     "@types/murmurhash3js": "^3.0.3",
     "@types/nock": "^11.1.0",
